# pen

./: .cspell.json  .gitattributes  .gitignore  .rustfmt.toml  404.html  CNAME  Cargo.toml  Dockerfile  Gemfile  LICENSE  LICENSE-APACHE  LICENSE.md  README.md  _sidebar.md  codecov.yaml  cspell.json  extra.css  for-developers.html  go.mod  go.sum  index.css  index.html  index.xml  mkdocs.yaml  package-lock.json  package.json  print.html  roadmap.html  roadmap.md  rust-toolchain.toml  searchindex.js  searchindex.json  sitemap.xml  the-zen.html
lib/app/: Cargo.toml
lib/app/src/: application_configuration.rs  common.rs  error.rs  external_package_archive_sorter.rs  external_package_configuration_reader.rs  external_package_topological_sorter.rs  file_finder.rs  infra.rs  lib.rs  module_compiler.rs  module_dependency_resolver.rs  module_finder.rs  module_formatter.rs  module_target_source_resolver.rs  package_build_script_compiler.rs  package_builder.rs  package_configuration.rs  package_creator.rs  package_documentation_generator.rs  package_format_checker.rs  package_formatter.rs  package_initializer.rs  package_name_formatter.rs  package_test_builder.rs  package_test_information_compiler.rs  package_test_interface_compiler.rs  prelude_interface_file_finder.rs  system_package_finder.rs  test_configuration.rs  test_linker.rs  test_module_finder.rs  test_runner.rs
lib/app/src/common/: dependency_serializer.rs  file_path_configuration.rs  file_path_resolver.rs  interface_serializer.rs  mod.rs  module_id_calculator.rs  module_path_resolver.rs  module_test_information_serializer.rs  package_id_calculator.rs  package_test_information_serializer.rs  test_interface_serializer.rs
lib/app/src/compile/: compile_configuration.rs  compile_infrastructure.rs  mod.rs  module_compiler.rs
lib/app/src/compile_dependency/: mod.rs  module_dependency_compiler.rs
lib/app/src/infra/: application_linker.rs  build_script_compiler.rs  build_script_runner.rs  builder.rs  (+26 more)
lib/ast-hir/: Cargo.toml
lib/ast-hir/src/: error.rs  import.rs  import_compiler.rs  imported_module.rs  lib.rs  module.rs  module_compiler.rs  module_prefix.rs  module_prefix_collector.rs  name_qualifier.rs  number.rs  number_compiler.rs  prelude_module_modifier.rs  singleton_record_compiler.rs  string.rs  string_compiler.rs  type_.rs
lib/ffi/: Cargo.toml
lib/ffi-macro/: Cargo.toml
lib/ffi-macro/src/: any.rs  attribute_list.rs  bindgen.rs  function.rs  into_any.rs  lib.rs  type_.rs  utilities.rs
lib/ffi-macro/tests/: any_conv.rs  bindgen.rs  function.rs  type_.rs
lib/ffi/src/: any.rs  arc.rs  boolean.rs  box_any.rs  closure.rs  constants.rs  cps.rs  error.rs  extra.rs  future.rs  lib.rs  list.rs  none.rs  number.rs  runtime.rs  string.rs  type_information.rs
lib/hir/: Cargo.toml
lib/hir-mir/: Cargo.toml
lib/hir-mir/src/: built_in_call.rs  compile_configuration.rs  compile_context.rs  concrete_type.rs  concurrency.rs  concurrency_configuration.rs  context.rs  debug_configuration.rs  downcast.rs  downcast_compiler.rs  dummy_type_configurations.rs  duplicate_function_name_validator.rs  duplicate_type_name_validator.rs  environment_creator.rs  error.rs  error_type.rs  error_type_configuration.rs  expression.rs  expression_compiler.rs  ffi_variant_type_validator.rs  generic_type_collection.rs  generic_type_definition.rs  generic_type_definition_compiler.rs  lib.rs  list_comprehension.rs  list_type_configuration.rs  main_function.rs  main_function_compiler.rs  main_module_configuration.rs  map_type_configuration.rs  module.rs  module_compiler.rs  module_interface.rs  module_interface_compiler.rs  number_type_configuration.rs  record_element_validator.rs  record_field_validator.rs  reflection.rs  runtime_function_declaration.rs  spawn_function_declaration.rs  (+21 more)
lib/hir/src/: analysis.rs  ir.rs  lib.rs  test.rs  types.rs
lib/hir_mir/: Cargo.toml
lib/hir_mir/src/: duplicate_function_name_validator.rs  duplicate_type_name_validator.rs  environment_creator.rs  error.rs  expression_compiler.rs  generic_type_definition_compiler.rs  lib.rs  list_type_configuration.rs  main_function_compiler.rs  module_compiler.rs  module_interface_compiler.rs  record_element_validator.rs  string_type_configuration.rs  try_operation_validator.rs  type_checker.rs  type_coercer.rs  type_compiler.rs  type_context.rs  type_extractor.rs  type_inferrer.rs
lib/http/ffi/: Cargo.toml
lib/infra/: Cargo.toml
lib/infra/src/: application_linker.rs  builder.rs  command_finder.rs  command_runner.rs  default_target_finder.rs  environment_variable_reader.rs  error.rs  external_package_initializer.rs  ffi_crate_finder.rs  file_path_converter.rs  file_path_displayer.rs  file_system.rs  json_package_configuration.rs  json_package_configuration_reader.rs  json_package_configuration_writer.rs  lib.rs  llvm_command_finder.rs  logger.rs  module_builder.rs  ninja_build_script_compiler.rs  ninja_build_script_dependency_compiler.rs  ninja_build_script_runner.rs  ninja_dependency_compiler.rs  ninja_module_build_script_compiler.rs  ninja_module_builder.rs  ninja_package_builder.rs  package_script_finder.rs  test_linker.rs
lib/lang/: Cargo.toml
lib/lang/src/: lib.rs  position.rs
lib/mir/: Cargo.toml
lib/mir-fmm/: Cargo.toml
lib/mir-fmm/src/: box_.rs  call.rs  calls.rs  closure.rs  closures.rs  configuration.rs  context.rs  declarations.rs  definitions.rs  entry_function.rs  entry_functions.rs  error.rs  expression.rs  expressions.rs  foreign_declaration.rs  foreign_declarations.rs  foreign_definition.rs  foreign_definitions.rs  foreign_value.rs  function_applications.rs  function_declaration.rs  function_declarations.rs  function_definition.rs  function_definitions.rs  lib.rs  pointers.rs  record.rs  records.rs  reference_count.rs  type_.rs  type_information.rs  types.rs  variant.rs  variants.rs  yield_.rs
lib/mir/src/: analysis.rs  ir.rs  lib.rs  test.rs  types.rs
lib/parse/: Cargo.toml
lib/parse/src/: combinator.rs  comment.rs  error.rs  input.rs  intermediate_error.rs  lib.rs  operations.rs  parser.rs  parsers.rs  parsers_v2.rs  stream.rs  utilities.rs
(+1529 files in other folders)
