[workspace]
members = [
  "cmd/pen",
  "lib/app",
  "lib/ast",
  "lib/ast-hir",
  "lib/doc",
  "lib/ffi",
  "lib/ffi-macro",
  "lib/format",
  "lib/hir",
  "lib/hir-mir",
  "lib/infra",
  "lib/interface",
  "lib/mir",
  "lib/mir-fmm",
  "lib/parse",
  "lib/position",
  "lib/test-info",
]
exclude = [
  "cmd/test",
  "examples",
  "lib/core",
  "lib/json",
  "lib/prelude",
  "lib/os",
  "lib/os-sync",
  "lib/test",
  "tmp",
]

[profile.release]
lto = true
# TODO Enable this when Dependabot on GitHub supports it.
# strip = true
