[workspace]
members = [
  "benchmark/rust",
  "cmd/pen",
  "lib/app",
  "lib/ast",
  "lib/ast-hir",
  "lib/doc",
  "lib/ffi",
  "lib/ffi-macro",
  "lib/format",
  "lib/hir",
  "lib/hir-mir",
  "lib/infra",
  "lib/interface",
  "lib/mir",
  "lib/mir-fmm",
  "lib/parse",
  "lib/position",
  "lib/test-info",
]
exclude = ["benchmark", "cmd/test", "examples", "packages", "tmp"]

[profile.release]
lto = true
# TODO Enable this when Dependabot on GitHub supports it.
# strip = true
