[package]
name = "app"
version = "0.1.0"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1"
fmm = { git = "https://github.com/raviqqe/fmm", branch = "main" }
fmm-llvm = { git = "https://github.com/raviqqe/fmm", branch = "main" }
hir = { path = "../hir" }
lang = { path = "../lang" }
mir = { path = "../mir" }
mir-fmm = { path = "../mir-fmm" }
once_cell = "1"
petgraph = "0.6"
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }
url = "2"
