[package]
name = "app"
version = "0.1.0"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
edition = "2021"

[dependencies]
ast = { path = "../ast" }
ast_hir = { path = "../ast-hir" }
bincode = "1"
doc = { path = "../doc" }
fmm = { git = "https://github.com/raviqqe/fmm", branch = "main" }
fmm-llvm = { git = "https://github.com/raviqqe/fmm", branch = "main" }
fnv = "1"
format = { path = "../format" }
hir = { path = "../hir" }
hir_mir = { path = "../hir-mir" }
interface = { path = "../interface" }
mir = { path = "../mir" }
mir-fmm = { path = "../mir-fmm" }
once_cell = "1"
parse = { path = "../parse" }
petgraph = "0.6"
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
target-lexicon = "0.12.8"
test-info = { path = "../test-info" }
url = "2"
