[package]
name = "ast_hir"
version = "0.1.0"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
edition = "2018"

[dependencies]
lang = { path = "../lang" }
hir = { path = "../hir" }
interface = { path = "../interface" }
itertools = "0.10"
position = { path = "../position" }

[dev-dependencies]
pretty_assertions = "0.7"
