[package]
name = "ast_hir"
version = "0.1.0"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
edition = "2021"

[dependencies]
ast = { path = "../ast" }
fnv = "1"
hir = { path = "../hir" }
interface = { path = "../interface" }
itertools = "0.10"
position = { path = "../position" }

[dev-dependencies]
pretty_assertions = "1.2"
