[package]
name = "pen-ffi-macro"
description = "FFI macro library for Pen programming language"
version = "0.1.26"
publish = true
edition = "2021"
license = "MIT"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
repository = "https://github.com/pen-lang/pen"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.5"
quote = "1"
syn = { version = "1", features = ["full"] }

[dev-dependencies]
pen-ffi = { path = "../ffi" }
