[package]
name = "pen-ffi-macro"
description = "FFI macro library for Pen programming language"
version = "0.5.0"
publish = true
edition.workspace = true
license = "MIT"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
repository = "https://github.com/pen-lang/pen"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.7"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
pen-ffi = { path = "../ffi" }
