[package]
name = "pen-ffi"
description = "FFI library for Pen programming language"
version = "0.3.56"
publish = true
edition = "2021"
license = "MIT"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
repository = "https://github.com/pen-lang/pen"

[dependencies]
async-stream = "0.3.3"
futures = "0.3"
pen-ffi-macro = { version = "0.1", path = "../ffi-macro" }

[dev-dependencies]
tokio = { "version" = "1", "features" = ["macros", "rt", "rt-multi-thread"] }
