[package]
name = "pen-ffi"
description = "FFI library for Pen programming language"
version = "0.10.23"
publish = true
edition = "2021"
license = "MIT"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
repository = "https://github.com/pen-lang/pen"

[dependencies]
async-stream = "0.3"
futures = "0.3"
pen-ffi-macro = { version = "0.5", path = "../ffi-macro" }
tokio = { version = "1", features = ["full"], optional = true }
tokio-macros = { version = "2", optional = true }
tokio-stream = { version = "0.1", features = ["full"], optional = true }
tokio-util = { version = "0.7", features = ["full"], optional = true }

[dev-dependencies]
tokio = { "version" = "1", "features" = ["full"] }

[features]
# This feature enables client libraries to use the exactly same rutnime of Tokio
# in resulting binaries.
# Otherwise, we might instantiate two different versions of Tokio runtimes there.
# For example, we might have multiple global variables of async contexts named
# with different symbols in TLS, which fails asynchronous function calls due to
# uninitialized contexts.
runtime = ["std", "tokio", "tokio-macros", "tokio-stream", "tokio-util"]
std = []
