[package]
name = "hir_mir"
version = "0.1.0"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
edition = "2018"

[dependencies]
hir = { path = "../hir" }
interface = { path = "../interface" }
mir = { path = "../mir" }
once_cell = "1"
position = { path = "../position" }

[dev-dependencies]
pretty_assertions = "1.0"
