[package]
name = "hir_mir"
version = "0.1.0"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
edition = "2021"

[dependencies]
fnv = "1"
hir = { path = "../hir" }
interface = { path = "../interface" }
itertools = "0.12"
mir = { path = "../mir" }
position = { path = "../position" }
test-info = { path = "../test-info" }

[dev-dependencies]
insta = "1"
once_cell = "1"
pretty_assertions = "1"
