[package]
name = "hir"
version = "0.1.0"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
edition = "2021"

[dependencies]
fnv = "1"
petgraph = "0.7"
plist = { git = "https://github.com/raviqqe/plist-rs", branch = "main" }
position = { path = "../position" }
serde = { version = "1", features = ["derive", "rc"] }

[dev-dependencies]
pretty_assertions = "1"
