[package]
name = "infra"
version = "0.1.0"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
edition = "2021"

[dependencies]
app = { path = "../app" }
glob = "0.3"
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
termcolor = "1"
test-info = { path = "../test-info" }
url = "2"
which = "6"
