[package]
name = "mir-fmm"
description = "MIR to F-- compiler"
version = "0.1.0"
license = "MIT"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
edition = "2021"

[dependencies]
fmm = { git = "https://github.com/raviqqe/fmm", branch = "feature/optimal-stack-sort" }
fnv = "1"
mir = { path = "../mir" }
once_cell = "1"
plist = { git = "https://github.com/raviqqe/plist-rs", branch = "main" }

[dev-dependencies]
insta = "1"
tempfile = "3"
fmm-c = { git = "https://github.com/raviqqe/fmm", branch = "feature/optimal-stack-sort" }
fmm-llvm = { git = "https://github.com/raviqqe/fmm", branch = "feature/optimal-stack-sort" }
