[package]
name = "mir"
description = "Mid-level Intermediate Representation"
version = "0.1.0"
license = "MIT"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
edition.workspace = true

[dependencies]
fnv = "1"
hamt = { git = "https://github.com/raviqqe/hamt-rs", branch = "main" }
plist = { git = "https://github.com/raviqqe/plist-rs", branch = "main" }

[dev-dependencies]
pretty_assertions = "1.4"
