[package]
name = "parse"
version = "0.1.0"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
edition = "2021"

[dependencies]
ast = { path = "../ast" }
combine = { version = "4", features = ["regex"] }
fnv = "1"
nom = "7.1.1"
nom-regex = "0.2.0"
nom_locate = "4.0.0"
once_cell = "1"
position = { path = "../position" }
regex = "1"

[dev-dependencies]
indoc = "1"
insta = "1"
pretty_assertions = "1"
